k8s/deploy/shop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:    
      containers:
      - name: shop
        image: 192.168.0.31:5000/k3d/shop:v1
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 600m
            memory: 1024Mi
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
