k8s/deploy/shop/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: shop
spec:
  selector:
    app: shop
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
