k8s/deploy/shop/ingress.yaml
# https://doc.traefik.io/traefik/providers/kubernetes-ingress/#ingressclass

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shop
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: shop.apps.k3d.contoso.com
      http:
        paths:
          - backend:
              serviceName: shop
              servicePort: 8000
            path: /
  tls:
    - secretName: apps-wildcard-cert
